--- a/works.mdx
+++ b/works.mdx
@@ -1,6 +1,6 @@
 ---
 title: How it works
-description: "A step-by-step walk through how a natural language function works."
+description: "A step-by-step walk through how a natural language function is initiated, deployed and called."
 ---
 
 This documentation
@@ -34,3 +34,11 @@ function.update(script=script)
 output = function.call({"term": "Dr. Vikram Sarabhai"})
 print(output)
 ```
+
+## 5. Iterating on development
+
+```python
+function.update(script=script)
+```
+
+## 6. Using in production
